FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Nothing to build in platform 'conv_accel_hw'

20:05:12 **** Incremental Build of configuration Debug for project conv_accel_sw ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/CPE_driver.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/CPE_driver.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/sw/conv_accel_hw/standalone_domain/bspinclude/include -MMD -MP -MF"src/CPE_driver.d" -MT"src/CPE_driver.o" -o "src/CPE_driver.o" "../src/CPE_driver.c"
In file included from ../src/CPE_driver.c:8:
../src/CPE_driver.h:67:1: warning: useless storage class specifier in empty declaration
   67 | };
      | ^
../src/CPE_driver.c: In function 'print_image_info':
../src/CPE_driver.c:43:6: warning: unused variable 'img_rx_byte_cnt' [-Wunused-variable]
   43 |  u32 img_rx_byte_cnt;
      |      ^~~~~~~~~~~~~~~
../src/CPE_driver.c:42:6: warning: unused variable 'img_rx_pckt_len' [-Wunused-variable]
   42 |  u32 img_rx_pckt_len;
      |      ^~~~~~~~~~~~~~~
../src/CPE_driver.c:41:7: warning: unused variable 'img_rx_ptr' [-Wunused-variable]
   41 |  u32* img_rx_ptr;
      |       ^~~~~~~~~~
../src/CPE_driver.c:39:6: warning: unused variable 'img_tx_byte_cnt' [-Wunused-variable]
   39 |  u32 img_tx_byte_cnt;
      |      ^~~~~~~~~~~~~~~
../src/CPE_driver.c:38:6: warning: unused variable 'img_tx_pckt_len' [-Wunused-variable]
   38 |  u32 img_tx_pckt_len;
      |      ^~~~~~~~~~~~~~~
../src/CPE_driver.c:37:7: warning: unused variable 'img_tx_ptr' [-Wunused-variable]
   37 |  u32* img_tx_ptr;
      |       ^~~~~~~~~~
../src/CPE_driver.c: In function 'fill_image':
../src/CPE_driver.c:75:15: warning: suggest parentheses around comparison in operand of '|' [-Wparentheses]
   75 |   if(next_char==','|next_char=='\n'){
      |      ~~~~~~~~~^~~~~
../src/CPE_driver.c:103:21: error: 'width' undeclared (first use in this function)
  103 |  image->img_width = width;
      |                     ^~~~~
../src/CPE_driver.c:103:21: note: each undeclared identifier is reported only once for each function it appears in
../src/CPE_driver.c:104:22: error: 'height' undeclared (first use in this function)
  104 |  image->img_height = height;
      |                      ^~~~~~
../src/CPE_driver.c: In function 'Process_Image':
../src/CPE_driver.c:133:6: warning: unused variable 'Value' [-Wunused-variable]
  133 |  u32 Value;
      |      ^~~~~
../src/CPE_driver.c:129:6: warning: unused variable 'Tries' [-Wunused-variable]
  129 |  int Tries = NUMBER_OF_TRANSFERS;
      |      ^~~~~
../src/CPE_driver.c: In function 'CC_comand_register':
../src/CPE_driver.c:274:1: warning: control reaches end of non-void function [-Wreturn-type]
  274 | }
      | ^
'Finished building: ../src/CPE_driver.c'
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/sw/conv_accel_hw/standalone_domain/bspinclude/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
In file included from ../src/helloworld.c:13:
../src/CPE_driver.h:67:1: warning: useless storage class specifier in empty declaration
   67 | };
      | ^
../src/helloworld.c: In function 'main':
../src/helloworld.c:56:6: warning: unused variable 'prc_status_err' [-Wunused-variable]
   56 |  u32 prc_status_err;
      |      ^~~~~~~~~~~~~~
../src/helloworld.c:55:6: warning: unused variable 'prc_status_last_state' [-Wunused-variable]
   55 |  u32 prc_status_last_state;
      |      ^~~~~~~~~~~~~~~~~~~~~
../src/helloworld.c:54:6: warning: unused variable 'prc_status_state' [-Wunused-variable]
   54 |  u32 prc_status_state;
      |      ^~~~~~~~~~~~~~~~
../src/helloworld.c:53:6: warning: unused variable 'prc_status' [-Wunused-variable]
   53 |  u32 prc_status;
      |      ^~~~~~~~~~
../src/helloworld.c:52:6: warning: unused variable 'prc_init' [-Wunused-variable]
   52 |  u32 prc_init;
      |      ^~~~~~~~
../src/helloworld.c:51:6: warning: unused variable 'dcfg_init' [-Wunused-variable]
   51 |  u32 dcfg_init;
      |      ^~~~~~~~~
../src/helloworld.c:49:6: warning: unused variable 'gpio_init' [-Wunused-variable]
   49 |  u32 gpio_init;
      |      ^~~~~~~~~
../src/helloworld.c:48:6: warning: unused variable 'copy_status' [-Wunused-variable]
   48 |  u32 copy_status;
      |      ^~~~~~~~~~~
../src/helloworld.c: In function 'XDcfg_Initialize':
../src/helloworld.c:148:6: warning: unused variable 'CtrlReg' [-Wunused-variable]
  148 |  u32 CtrlReg;
      |      ^~~~~~~
../src/helloworld.c: At top level:
../src/helloworld.c:17:12: warning: 'CheckData' declared 'static' but never defined [-Wunused-function]
   17 | static int CheckData(u32 type);
      |            ^~~~~~~~~
../src/helloworld.c:146:15: warning: 'XDcfg_Initialize' defined but not used [-Wunused-function]
  146 | static XDcfg *XDcfg_Initialize(u16 DeviceId)
      |               ^~~~~~~~~~~~~~~~
'Finished building: ../src/helloworld.c'
' '
'Building target: conv_accel_sw.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -LC:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/sw/conv_accel_hw/standalone_domain/bsplib/lib -o "conv_accel_sw.elf"  ./src/CPE_driver.o ./src/SD.o ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group -Wl,--start-group,-lxilffs,-lxil,-lgcc,-lc,--end-group
'Finished building target: conv_accel_sw.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size conv_accel_sw.elf  |tee "conv_accel_sw.elf.size"
   text	   data	    bss	    dec	    hex	filename
  74940	   3360	33574416	33652716	2017fec	conv_accel_sw.elf
'Finished building: conv_accel_sw.elf.size'
' '
20:05:12 **** Incremental Build of configuration Debug for project conv_accel_sw_system ****
make all 
Generating bif file for the system project
generate_system_bif.bat 50362 C:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/conv_accel_hw.xpfm standalone_domain C:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_sw_system/Debug/system.bif
sdcard_gen --xpfm C:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_hw/export/conv_accel_hw/conv_accel_hw.xpfm --sys_config conv_accel_hw --bif C:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_sw_system/Debug/system.bif --bitstream C:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_sw/_ide/bitstream/CPE_Wrapper.bit --elf C:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_sw/Debug/conv_accel_sw.elf,ps7_cortexa9_0
creating BOOT.BIN using C:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_sw/_ide/bitstream/CPE_Wrapper.bit
Running C:/Xilinx/Vitis/2020.1/bin/bootgen  -image C:/GitHub/ReconHardware/FPGA_Files/Projects/ConvolutionAccel_d/ConvolutionAccel_d.vitis/conv_accel_sw_system/Debug/sd_card_temp/boot.bif -w -o i BOOT.BIN
